k8s/apps/frontend/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio.io/rev: 1-27-0
