k8s/apps/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: frontend
        image: niteesh20/myapp-frontend:latest
        ports:
        - containerPort: 80 # Assuming port 80 for frontend
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
