k8s/apps/frontend/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
    - istio-system/main-gateway
  hosts:
    - myfrontend
  http:
    - route:
      - destination:
          host: frontend
          port:
            number: 80
